--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "dependency-injector (>=4.46.0,<5.0.0)"
+    "dependency-injector (>=4.46.0,<5.0.0)",
+    "pre-commit (>=4.2.0,<5.0.0)"
 ]
 
 
