--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,37 @@
-[project]
+[tool.poetry]
 name = "finbot"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Koresh06",email = "korets-24@mail.ru"}
-]
+authors = ["Koresh06 <korets-24@mail.ru>"]
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "fastapi (>=0.115.12,<0.116.0)",
-    "sqlalchemy (>=2.0.40,<3.0.0)",
-    "sqlmodel (>=0.0.24,<0.0.25)",
-    "aiogram (>=3.20.0.post0,<4.0.0)",
-    "aiogram-dialog (>=2.3.1,<3.0.0)",
-    "ruff (>=0.11.8,<0.12.0)",
-    "redis (>=6.0.0,<7.0.0)",
-    "betterlogging (>=1.0.0,<2.0.0)",
-    "bcrypt (==4.0.1)",
-    "python-multipart (>=0.0.20,<0.0.21)",
-    "python-jose (>=3.4.0,<4.0.0)",
-    "alembic (>=1.15.2,<2.0.0)",
-    "environs (>=14.1.1,<15.0.0)",
-    "passlib (>=1.7.4,<2.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)",
-    "aiosqlite (>=0.21.0,<0.22.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)",
-    "dependency-injector (>=4.46.0,<5.0.0)",
-    "pre-commit (>=4.2.0,<5.0.0)"
-]
+packages = [{ include = "finbot" }]
 
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.dependencies]
+python = ">=3.11"
+fastapi = ">=0.115.12,<0.116.0"
+sqlalchemy = ">=2.0.40,<3.0.0"
+sqlmodel = ">=0.0.24,<0.0.25"
+aiogram = ">=3.20.0.post0,<4.0.0"
+aiogram-dialog = ">=2.3.1,<3.0.0"
+ruff = ">=0.11.8,<0.12.0"
+redis = ">=6.0.0,<7.0.0"
+betterlogging = ">=1.0.0,<2.0.0"
+bcrypt = "==4.0.1"
+python-multipart = ">=0.0.20,<0.0.21"
+python-jose = ">=3.4.0,<4.0.0"
+alembic = ">=1.15.2,<2.0.0"
+environs = ">=14.1.1,<15.0.0"
+passlib = ">=1.7.4,<2.0.0"
+asyncpg = ">=0.30.0,<0.31.0"
+aiosqlite = ">=0.21.0,<0.22.0"
+pydantic-settings = ">=2.9.1,<3.0.0"
+dependency-injector = ">=4.46.0,<5.0.0"
+pre-commit = ">=4.2.0,<5.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
 
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
