--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ aiosqlite = ">=0.21.0,<0.22.0"
 pydantic-settings = ">=2.9.1,<3.0.0"
 dependency-injector = ">=4.46.0,<5.0.0"
 pre-commit = ">=4.2.0,<5.0.0"
+google-genai = "^1.24.0"
+uvicorn = "^0.35.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
